--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "dev": "supervisor -x micro-bot index.js",
-    "start": "micro-bot -d ${NOW_URL}",
-    "lint": "eslint .",
-    "test": "npm run lint"
+    "now-start": "micro-bot -d ${NOW_URL}"
   },
   "engines": {
     "node": ">=8.5.0"
@@ -19,7 +16,8 @@
   "author": " <>",
   "license": "MIT",
   "dependencies": {
-    "micro-bot": "^2.0.0"
+    "micro-bot": "^2.0.0",
+    "restler": "^3.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
@@ -30,8 +28,5 @@
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^3.0.1",
     "supervisor": "^0.12.0"
-  },
-  "scripts": {
-    "now-start": "micro-bot -d ${NOW_URL}"
   }
 }
